[package]
name = "saker"
description = "l18n static site generator in safety"
version = "0.0.0"
edition = "2021"

homepage = "https://github.com/plabayo/saker"
license = "MIT"
readme = "README.md"
repository = "https://github.com/plabayo/saker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
