[package]
description = "l18n static site generator in safety"
edition = "2021"
homepage = "https://github.com/plabayo/saker"
license = "MIT"
name = "saker"
readme = "README.md"
repository = "https://github.com/plabayo/saker"
version = "0.0.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
